# bang-launcher

./: .gitmodules  CMakeLists.txt  bang.rc  main.c  manifest.xml  resources.h  sys_windows.h
.github/workflows/: cmake.yml
